refactor: 💡 Updated owners did API
